# pyvscc

./: .gitmodules  CMakeLists.txt  README.md
include/: lexer.h  pybuild.h  pyimpl.h  util.h
src/: lexer.c  main.c  pybuild.c  pyimpl.c  util.c
